--- a/css/main.css
+++ b/css/main.css
@@ -58,7 +58,7 @@
     .menu-branding .portrait {
       width: 250px;
       height: 250px;
-      background: url("../img/portrait.jpeg");
+      background: url(../img/portrait.jpeg);
       border-radius: 50%;
       border: solid 3px #eece1a; }
   .menu .nav-item {
@@ -109,7 +109,7 @@ body {
   line-height: 1.5;
   overflow: auto; }
   body#bg-img {
-    background: url(../img/background3.jpg);
+    background: url(../img/background1.jpg);
     background-attachment: fixed;
     background-size: cover; }
     body#bg-img:after {
@@ -244,7 +244,7 @@ main {
     height: 24vh;
     transform: translate3d(100%, 0, 0); }
     .menu-branding .portrait {
-      background: url("../img/portrait_small.jpeg");
+      background: url(../img/portrait_small.jpeg);
       width: 150px;
       height: 150px; }
   .about-info {
