--- a/css/main.css
+++ b/css/main.css
@@ -109,7 +109,7 @@ body {
   line-height: 1.5;
   overflow: auto; }
   body#bg-img {
-    background: url(../img/background1.jpg);
+    /* background: url(../img/background1.jpg); */
     background-attachment: fixed;
     background-size: cover; }
     body#bg-img:after {
